--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
-# Figures & PDF parsing
-pymupdf==1.24.9           # PyMuPDF
-Pillow==10.4.0
+# --- Core app ---
+streamlit>=1.35
 
-# Vector DB
-chromadb==0.5.5
+# --- OpenAI + LangChain ---
+openai>=1.40
+langchain>=0.2
+langchain-community>=0.2
 
-# Embeddings
-openai==1.40.2            # if you use OpenAI embeddings
-sentence-transformers==3.0.1  # fallback/local embedding option
+# --- Vector DB ---
+chromadb>=0.5.5
+pysqlite3-binary>=0.5           # fixes sqlite issues on many hosts
 
-# (Optional) OCR if you have scanned PDFs
-pytesseract==0.3.13
+# --- PDF & doc parsing ---
+pypdf>=4.2
+pdfplumber>=0.11
+pdfminer.six>=20240706
+python-docx>=1.1
+pandas>=2.2
 
-# (Optional) pdffigures2 requires Java + preinstall; we wrap it if available
+# --- Images (figures/thumbnails) ---
+Pillow>=10.4
+opencv-python-headless>=4.10
 
-# Streamlit (if not already present)
-streamlit==1.37.1
+# --- Optional OCR (later) ---
+pytesseract>=0.3.10
 
+# --- Utilities ---
+numpy>=1.26
+tqdm>=4.66
+rich>=13.7
+python-dotenv>=1.0
+
+# --- Optional local embeddings fallback ---
+sentence-transformers>=3.0
